--- a/mianshen-pc/package.json
+++ b/mianshen-pc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop",
+  "name": "mianshen-pc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,6 @@
     "element-ui": "^2.4.5",
     "reset-css": "^5.0.1",
     "vue": "^2.6.14",
-    "vue-monoplasty-slide-verify": "^1.3.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
