--- a/v2-management/package.json
+++ b/v2-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop",
+  "name": "v2-management",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.4.5",
-    "reset-css": "^5.0.1",
     "vue": "^2.6.14",
-    "vue-monoplasty-slide-verify": "^1.3.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
